--- a/views/index.html
+++ b/views/index.html
@@ -11,8 +11,12 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="public/styles/8727a602.vendor.css"/>
-    <link rel="stylesheet" href="public/styles/8fa00220.main.css"/>
+    <!-- build:css(app) styles/vendor.css -->
+    <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <!-- endbower -->
+    <!-- endbuild -->
+    <link rel="stylesheet" href="styles/8fa00220.main.css"/>
   </head>
   <body ng-app="dugoutApp">
     <!--[if lt IE 7]>
@@ -28,8 +32,18 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <script src="public/scripts/eae6ccf4.vendor.js"></script>
+    <!-- build:js(app) scripts/vendor.js -->
+    <!-- bower:js -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <!-- endbower -->
+    <!-- endbuild -->
 
-        <script src="public/scripts/eddb643b.scripts.js"></script>
+        <script src="scripts/4239f31a.scripts.js"></script>
 </body>
 </html>
