--- a/views/partials/game.html
+++ b/views/partials/game.html
@@ -1,4 +1,4 @@
-<div ng-include="'partials/navbar'"></div>
+<div ng-include="'views/partials/navbar'"></div>
 
 <div class="container">
   <div style="display:inline-block; margin-left: auto; margin-right: auto">
