updated to public folder

--- a/views/index.html
+++ b/views/index.html
@@ -13,10 +13,10 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(app) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="public/bower_components/bootstrap/dist/css/bootstrap.css">
     <!-- endbower -->
     <!-- endbuild -->
-    <link rel="stylesheet" href="styles/main.css"/>
+    <link rel="stylesheet" href="public/styles/main.css"/>
   </head>
   <body ng-app="dugoutApp">
     <!--[if lt IE 7]>
@@ -34,13 +34,13 @@
 
     <!-- build:js(app) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="public/bower_components/jquery/dist/jquery.js"></script>
+    <script src="public/bower_components/angular/angular.js"></script>
+    <script src="public/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="public/bower_components/angular-resource/angular-resource.js"></script>
+    <script src="public/bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="public/bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="public/bower_components/angular-route/angular-route.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
