updated to public folder

--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="public/bower_components/bootstrap/dist/css/bootstrap.css">
     <!-- endbower -->
     <!-- endbuild -->
-    <link rel="stylesheet" href="public/styles/main.css"/>
+    <link rel="stylesheet" href="public/styles/8fa00220.main"/>
   </head>
   <body ng-app="dugoutApp">
     <!--[if lt IE 7]>
