--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="public/bower_components/bootstrap/dist/css/bootstrap.css">
     <!-- endbower -->
     <!-- endbuild -->
-    <link rel="stylesheet" href="public/styles/8fa00220.main"/>
+    <link rel="stylesheet" href="public/styles/8fa00220.main.css"/>
   </head>
   <body ng-app="dugoutApp">
     <!--[if lt IE 7]>
@@ -44,6 +44,6 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <script src="scripts/4239f31a.scripts.js"></script>
+        <script src="public/scripts/4239f31a.scripts.js"></script>
 </body>
 </html>
