--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
     <!-- endbuild -->
     <link rel="stylesheet" href="public/styles/8fa00220.main.css"/>
   </head>
-  <body ng-app="dugoutApp">
+  <body id="ng-app" ng-app="dugoutApp">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -28,8 +28,8 @@
 
 
     <!--[if lt IE 9]>
-    <script src="bower_components/es5-shim/es5-shim.js"></script>
-    <script src="bower_components/json3/lib/json3.min.js"></script>
+    <script src="public/bower_components/es5-shim/es5-shim.js"></script>
+    <script src="public/bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
     <!-- build:js(app) scripts/vendor.js -->
